   accepts and returns CharSequence instead of String which should be converted
   into a String before used in a datastructure that relies on hashCode / equals.
   (Simon Willnauer)
  
Changes in Runtime Behavior

 * LUCENE-3698: FastVectorHighlighter no longer adds a multi value separator
   to the end of the highlighted text. (Shay Banon via Koji Sekiguchi)

New Features

 * LUCENE-3596: DirectoryTaxonomyWriter extensions can override createIndexWriterConfig() 
   and modify how its internal index writer is opened. (Doron Cohen)

 * SOLR-2982: Added phonetic encoders to contrib/analyzers/phonetic:
   Metaphone, Soundex, Caverphone, Beider-Morse, etc.  (Robert Muir)

 * LUCENE-2906: Added CJKBigramFilter that forms bigrams from StandardTokenizer or
   ICUTokenizer CJK tokens, and CJKWidthFilter that normalizes halfwidth/fullwidth. 
   This filter supports unicode supplementary characters and you can toggle whether 
   bigrams are formed for each of Han/Hiragana/Katakana/Hangul independently. Deprecates
   CJKTokenizer.  (Tom Burton-West, Robert Muir)

 * LUCENE-3634: IndexReader's static main method was moved to a new
   tool, CompoundFileExtractor, in contrib/misc.  (Mike McCandless)

 * SOLR-3020: Add KeywordAttribute support to HunspellStemFilter. Terms marked as
   keywords are not modified by the stemmer. (Simon Willnauer, Helge Jenssen) 

 * LUCENE-3305: Added Kuromoji morphological analyzer for Japanese.
   (Christian Moen, Masaru Hasegawa, Simon Willnauer, Uwe Schindler, Mike McCandless, Robert Muir)

 * LUCENE-3730: Refine Kuromoji search mode (Mode.SEARCH) decompounding
   heuristics.  (Christian Moen via Robert Muir)

 * LUCENE-3767: Kuromoji tokenizer/analyzer produces both compound words 
   and the segmentation of that compound in Mode.SEARCH. (Robert Muir, Mike McCandless via Christian Moen)

 * LUCENE-3685: Add ToChildBlockJoinQuery and renamed previous
   BlockJoinQuery to ToParentBlockJoinQuery, so that you can now do